--- a/config/crd/patches/webhook_in_visitorsapps.yaml
+++ b/config/crd/patches/webhook_in_visitorsapps.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: visitorsapps.app.redhat-scholars.github.io
+  name: visitorsapps.app.redhat.com
 spec:
   conversion:
     strategy: Webhook
