--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -7,7 +7,7 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - app.redhat-scholars.github.io
+  - app.redhat.com
   resources:
   - visitorsapps
   verbs:
@@ -19,13 +19,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - app.redhat-scholars.github.io
+  - app.redhat.com
   resources:
   - visitorsapps/finalizers
   verbs:
   - update
 - apiGroups:
-  - app.redhat-scholars.github.io
+  - app.redhat.com
   resources:
   - visitorsapps/status
   verbs:
